syntax = "proto3";

package com.project.ads.api.v1;

option java_multiple_files = true;
option java_outer_classname = "AdsDataApiProto";
option java_package = "com.project.ads.api.v1";

service AdsApi {
  rpc CreateAd(CreateAdRequest) returns (CreateAdResponse);
  rpc GetAd(GetAdRequest) returns (GetAdResponse);
}

message CreateAdRequest {
  string title = 1;
  string description = 2;
  double price = 3;
  string owner = 4;
  string status = 5;
}

message CreateAdResponse {
  string id = 1;
}

message GetAdRequest {
  string id = 1;
}

message GetAdResponse {
  string id = 1;
  string title = 2;
  string description = 3;
  double price = 4;
  string owner = 5;
  string status = 6;
}